--- a/PersonalPortal/PersonalPortal/Views/HelloWorld.html
+++ b/PersonalPortal/PersonalPortal/Views/HelloWorld.html
@@ -101,7 +101,8 @@
                 { "Name": "Developer", "Url": "http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers" },
                 { "Name": "js-beautify", "Url": "https://github.com/beautify-web/js-beautify" },
                 { "Name": "CodeMirror", "Url": "https://github.com/codemirror/codemirror" },
-                { "Name": "particles.js", "Url": "https://github.com/VincentGarreau/particles.js" }
+                { "Name": "particles.js", "Url": "https://github.com/VincentGarreau/particles.js" },
+                { "Name": "bootstrap-contextmenu", "Url": "https://github.com/sydcanem/bootstrap-contextmenu" }
             ];
 
             $scope.GetShortCut = function (refresh) {
