--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -130,9 +130,13 @@
                 "LinkUrl": "/Views/Resume.html",
                 "Navigation": []
             }, {
-                "LinkName": "个人作品集",
-                "LinkUrl": "/Views/Portfolio.html",
-                "Navigation": []
+                "LinkName": "算法验证",
+                "LinkUrl": "#",
+                "Navigation": [{
+                    "LinkName": "A*算法",
+                    "LinkUrl": "/Views/Algorithm/AStar.html",
+                    "Navigation": []
+                }]
             }, {
                 "LinkName": "个人工具箱",
                 "LinkUrl": "#",
