提交AutoUI页面及相关文件

--- a/PersonalPortal/PersonalPortal/Views/Algorithm/Tree.html
+++ b/PersonalPortal/PersonalPortal/Views/Algorithm/Tree.html
@@ -38,7 +38,7 @@
         <div class="container_foot"></div>
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
-    <script type="text/javascript" src="/Scripts/CanvasHelper.js"></script>
+    <script type="text/javascript" src="/Scripts/Canvas/CanvasHelper.js"></script>
     <script type="text/javascript" src="/Scripts/bootstrap-3.3.7-dist/js/bootstrap-slider.min.js"></script>
     <script type="text/javascript">
         Angular(function ($scope, factory) {
