--- a/PersonalPortal/PersonalPortal/Views/Algorithm/AStar.html
+++ b/PersonalPortal/PersonalPortal/Views/Algorithm/AStar.html
@@ -124,7 +124,7 @@
         </div>
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
-    <script type="text/javascript" src="/Scripts/CanvasHelper.js"></script>
+    <script type="text/javascript" src="/Scripts/Canvas/CanvasHelper.js"></script>
     <script type="text/javascript" src="/Scripts/bootstrap-3.3.7-dist/js/bootstrap-slider.min.js"></script>
     <script type="text/javascript" src="/Scripts/bootstrap-contextmenu/js/bootstrap-contextmenu.js"></script>
     <script type="text/javascript" src="/Scripts/bootstrap-contextmenu/js/prettify.js"></script>
