--- a/PersonalPortal/PersonalPortal/Views/UnitTest.html
+++ b/PersonalPortal/PersonalPortal/Views/UnitTest.html
@@ -148,7 +148,7 @@
                 <span class="name">Excel操作：</span>
                 <div class="input-group-btn inline">
                     <button type="button" class="btn btn-default dropdown-toggle input-select">
-                        <span class="separated">导出模板</span>
+                        <span class="separated">导出参数模板</span>
                     </button>
                 </div>
                 <div class="input-group-btn inline">
